--- a/InvestmentTracker/Pages/Expenses/Budgets.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Budgets.cshtml
@@ -64,7 +64,7 @@
         @if (Model.ViewModel.Budgets.Any())
         {
             <div class="table-responsive">
-                <table class="table align-middle mb-0">
+                <table class="table table-striped align-middle mb-0">
                     <thead class="table-light">
                         <tr>
                             <th>Category</th>
