--- a/InvestmentTracker/Pages/Expenses/Regular.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Regular.cshtml
@@ -145,7 +145,7 @@
                             </div>
                         }
                         <div class="table-responsive" style="max-height: calc(100vh - 400px); overflow-y: auto;">
-                            <table class="table mb-0" id="expensesTable">
+                            <table class="table table-striped mb-0" id="expensesTable">
                                 <thead>
                                     <tr>
                                         <th>Expense</th>
