--- a/InvestmentTracker/Pages/Expenses/ExpenseCategories.cshtml
+++ b/InvestmentTracker/Pages/Expenses/ExpenseCategories.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-8">
     <div class="table-responsive">
-    <table class="table">
+    <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Name</th>
