--- a/InvestmentTracker/Pages/Expenses/FamilyMembers.cshtml
+++ b/InvestmentTracker/Pages/Expenses/FamilyMembers.cshtml
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <div class="card-body">
-                <table class="table mb-0">
+                <table class="table table-striped mb-0">
                     <thead>
                         <tr>
                             <th>Name</th>
