--- a/InvestmentTracker/Pages/Expenses/Index.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Index.cshtml
@@ -88,7 +88,7 @@
             </div>
             <div class="card-body collapse show" id="regularIncomesCollapse">
                 <div class="table-responsive">
-                <table class="table mb-0">
+                <table class="table table-striped mb-0">
                     <thead>
                         <tr>
                             <th>Source</th>
@@ -139,7 +139,7 @@
             </div>
             <div class="card-body collapse show" id="oneTimeIncomesCollapse">
                 <div class="table-responsive">
-                <table class="table mb-0">
+                <table class="table table-striped mb-0">
                     <thead>
                         <tr>
                             <th>Date</th>
@@ -204,7 +204,7 @@
         @if (Model.ViewModel.Budgets.Any(b => b.BudgetAmount.HasValue))
         {
             <div class="table-responsive">
-                <table class="table align-middle mb-0">
+                <table class="table table-striped align-middle mb-0">
                     <thead class="table-light">
                         <tr>
                             <th>Category</th>
@@ -337,7 +337,7 @@
                 }
                 <div id="regularExpensesContainer">
                     <div class="table-responsive">
-                    <table class="table mb-0" id="regularExpensesTable">
+                    <table class="table table-striped mb-0" id="regularExpensesTable">
                         <thead>
                             <tr>
                                 <th data-sort="text">Name</th>
@@ -421,7 +421,7 @@
             <div class="card-body collapse show" id="irregularExpensesCollapse">
                 <div id="irregularExpensesContainer">
                     <div class="table-responsive">
-                    <table class="table mb-0" id="irregularExpensesTable">
+                    <table class="table table-striped mb-0" id="irregularExpensesTable">
                         <thead>
                             <tr>
                                 <th data-sort="date">Date</th>
@@ -734,7 +734,7 @@
                     <div class="mb-3">
                         <label class="form-label">Schedule History</label>
                         <div class="table-responsive">
-                            <table class="table table-sm table-bordered" id="editExpenseSchedulesTable">
+                            <table class="table table-striped table-sm table-bordered" id="editExpenseSchedulesTable">
                                 <thead class="table-light">
                                     <tr>
                                         <th>Start Year/Month</th>
