--- a/InvestmentTracker/Pages/Expenses/_BudgetHistoryPartial.cshtml
+++ b/InvestmentTracker/Pages/Expenses/_BudgetHistoryPartial.cshtml
@@ -3,7 +3,7 @@
 @if (Model.Any())
 {
     <div class="table-responsive">
-        <table class="table table-sm">
+        <table class="table table-striped table-sm">
             <thead class="table-light">
                 <tr>
                     <th>Period</th>
