--- a/InvestmentTracker/Pages/Investments/Edit.cshtml
+++ b/InvestmentTracker/Pages/Investments/Edit.cshtml
@@ -61,7 +61,7 @@
     {
         @if (Model.Schedules?.Any() == true)
         {
-            <table class="table table-sm align-middle w-auto schedules-table">
+            <table class="table table-striped table-sm align-middle w-auto schedules-table">
                 <thead>
                     <tr>
                         <th>Start</th>
@@ -207,7 +207,7 @@
 
         @if (Model.Contributions?.Any() == true)
         {
-            <table class="table table-sm w-auto schedules-table mt-2">
+            <table class="table table-striped table-sm w-auto schedules-table mt-2">
                 <thead><tr><th>Date</th><th>Amount</th><th></th></tr></thead>
                 <tbody>
                 @foreach (var c in Model.Contributions.OrderByDescending(c=>c.Date))
