--- a/InvestmentTracker/Pages/Investments/Values.cshtml
+++ b/InvestmentTracker/Pages/Investments/Values.cshtml
@@ -110,7 +110,7 @@
     @if (Model.Investment.OneTimeContributions?.Any() == true)
     {
         <div class="table-responsive">
-        <table class="table table-sm mt-2">
+        <table class="table table-striped table-sm mt-2">
             <thead><tr><th>Date</th><th>Amount</th><th></th></tr></thead>
             <tbody>
             @foreach (var c in Model.Investment.OneTimeContributions.OrderByDescending(c=>c.Date))
@@ -155,7 +155,7 @@
     }
     
     <div class="table-responsive">
-    <table class="table table-sm">
+    <table class="table table-striped table-sm">
         <thead>
             <tr>
                 <th>Date</th>
