--- a/InvestmentTracker/Pages/Shared/_KeyboardShortcutsPartial.cshtml
+++ b/InvestmentTracker/Pages/Shared/_KeyboardShortcutsPartial.cshtml
@@ -21,7 +21,7 @@
                         <span class="keyboard-shortcut-description">Go to Investments</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">P</span>
+                        <span class="keyboard-shortcut-key">T</span>
                         <span class="keyboard-shortcut-description">Go to Portfolio</span>
                     </div>
                     <div class="keyboard-shortcut-item">
@@ -37,8 +37,30 @@
                         <span class="keyboard-shortcut-description">Next Month (also N)</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">C</span>
-                        <span class="keyboard-shortcut-description">Current Month (also T, Home)</span>
+                        <span class="keyboard-shortcut-key">Home</span>
+                        <span class="keyboard-shortcut-description">Current Month</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="keyboard-shortcuts-section">
+                <h6 class="keyboard-shortcuts-section-title">Expense Dashboard</h6>
+                <div class="keyboard-shortcuts-list">
+                    <div class="keyboard-shortcut-item">
+                        <span class="keyboard-shortcut-key">A</span>
+                        <span class="keyboard-shortcut-description">Add Regular Expense</span>
+                    </div>
+                    <div class="keyboard-shortcut-item">
+                        <span class="keyboard-shortcut-key">Q</span>
+                        <span class="keyboard-shortcut-description">Quick Add Irregular Expense</span>
+                    </div>
+                    <div class="keyboard-shortcut-item">
+                        <span class="keyboard-shortcut-key">O</span>
+                        <span class="keyboard-shortcut-description">Add One-Time Income</span>
+                    </div>
+                    <div class="keyboard-shortcut-item">
+                        <span class="keyboard-shortcut-key">U</span>
+                        <span class="keyboard-shortcut-description">Update Income Fields</span>
                     </div>
                 </div>
             </div>
@@ -47,7 +69,7 @@
                 <h6 class="keyboard-shortcuts-section-title">Investment Management</h6>
                 <div class="keyboard-shortcuts-list">
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">N</span>
+                        <span class="keyboard-shortcut-key">C</span>
                         <span class="keyboard-shortcut-description">Create New Investment</span>
                     </div>
                 </div>
@@ -61,7 +83,7 @@
                         <span class="keyboard-shortcut-description">Add Investment Value</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">C</span>
+                        <span class="keyboard-shortcut-key">B</span>
                         <span class="keyboard-shortcut-description">Add One-Time Contribution</span>
                     </div>
                     <div class="keyboard-shortcut-item">
