--- a/InvestmentTracker/Pages/Investments/Values.cshtml
+++ b/InvestmentTracker/Pages/Investments/Values.cshtml
@@ -104,7 +104,7 @@
         </div>
     </form>
     <div class="text-muted small mb-3">
-        <i class="bi bi-keyboard me-1"></i>Tip: Press <kbd>C</kbd> to focus contribution form, <kbd>Enter</kbd> to add
+        <i class="bi bi-keyboard me-1"></i>Tip: Press <kbd>B</kbd> to focus contribution form, <kbd>Enter</kbd> to add
     </div>
 
     @if (Model.Investment.OneTimeContributions?.Any() == true)
