--- a/InvestmentTracker/Pages/Portfolio/Index.cshtml
+++ b/InvestmentTracker/Pages/Portfolio/Index.cshtml
@@ -37,7 +37,7 @@
     }
 </div>
 
-<h3>Value by Category</h3>
+<h3 class="mt-4">Value by Category</h3>
 <div class="row mb-4">
     @foreach (var categoryTotal in Model.TotalsByCategory.OrderBy(kv => kv.Key.ToString()))
     {
@@ -60,8 +60,9 @@
     }
 </div>
 
-<h3>Latest Investment Values</h3>
-<table class="table table-striped">
+<h3 class="mt-4">Latest Investment Values</h3>
+<div class="table-responsive">
+    <table class="table table-striped">
     <thead>
         <tr>
             <th>Investment</th>
@@ -101,7 +102,8 @@
         </tr>
     }
     </tbody>
-</table>
+    </table>
+</div>
 
 @section Scripts {
     <script>
