--- a/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
+++ b/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
@@ -1,10 +1,9 @@
 @{
     var path = ViewContext.HttpContext.Request.Path;
-    var isExpensesSection = path.StartsWithSegments("/Expenses") || path.StartsWithSegments("/Analytics");
+    var isExpensesSection = path.StartsWithSegments("/Expenses");
     var isInvestmentsSection = path.StartsWithSegments("/Investments") ||
                               path.StartsWithSegments("/Values") ||
                               path.StartsWithSegments("/Portfolio");
-    var isAnalyticsSection = path.StartsWithSegments("/Analytics");
 }
 
 <ul class="navbar-nav flex-grow-1">
@@ -30,11 +29,6 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" asp-area="" asp-page="/Expenses/FinancialScheduleConfig">Financial Schedule Config</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link @(isAnalyticsSection ? "active" : "")" asp-area="" asp-page="/Analytics/Index">
-                <i class="bi bi-bar-chart-line me-1"></i>Analytics
-            </a>
         </li>
     }
     else if (isInvestmentsSection)
