--- a/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
+++ b/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
@@ -28,6 +28,9 @@
             <a class="nav-link" asp-area="" asp-page="/Expenses/Budgets">Budgets</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-page="/Expenses/Analysis">Analysis</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" asp-area="" asp-page="/Expenses/FinancialScheduleConfig">Financial Schedule Config</a>
         </li>
     }
